injectable/tests/ui/unknown_impl_attribute.stderr
error: unknown injectable_impl attribute: `bad`
 --> tests/ui/unknown_impl_attribute.rs
  |
  | #[injectable(bad = "value")]
  |              ^^^
